# vertex-python-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  publish-docs.yml
docs/source/: api-client.rst  api-contracts.rst  api-engine-client.rst  api-indexer-client.rst  api-reference.rst  api-utils.rst  conf.py  getting-started.rst  index.rst  user-guide.rst  user-guides.rst  user-reference.rst
sanity/: __init__.py  client.py  contracts.py  engine_client.py  indexer_client.py  isolated.py  rewards.py  signing.py  test_reduce_only.py  trigger_client.py  vertex_client.py
tests/: conftest.py
tests/contracts/: test_eip712_signing.py  test_vertex_contracts.py
tests/engine_client/: test_burn_lp.py  test_cancel_and_place.py  test_cancel_orders.py  test_cancel_product_orders.py  test_create_client.py  test_execute_client.py  test_expiration.py  test_hello_world.py  test_link_signer.py  test_liquidate_subaccount.py  test_mint_lp.py  test_nonce.py  test_place_isolated_order.py  test_place_order.py  test_withdraw_collateral.py
tests/indexer_client/: test_query_params.py
tests/trigger_client/: test_cancel_trigger_orders.py  test_cancel_trigger_product_orders.py  test_create_client.py  test_execute_client.py  test_place_trigger_order.py
tests/utils/: test_math.py
tests/vertex_client/: test_create_vertex_client.py  test_market_api.py  test_spot_api.py  test_subaccount_api.py
vertex_protocol/: generate_stream_auth.py
vertex_protocol/client/: __init__.py  context.py
vertex_protocol/client/apis/: __init__.py  base.py
vertex_protocol/client/apis/market/: __init__.py  execute.py  query.py
vertex_protocol/client/apis/perp/: __init__.py  query.py
vertex_protocol/client/apis/rewards/: __init__.py  execute.py  query.py
vertex_protocol/client/apis/spot/: __init__.py  base.py  execute.py  query.py
vertex_protocol/client/apis/subaccount/: __init__.py  execute.py  query.py
vertex_protocol/contracts/: __init__.py  loader.py  types.py
vertex_protocol/contracts/abis/: Endpoint.json  FQuerier.json  IClearinghouse.json  IEndpoint.json  IFoundationRewardsAirdrop.json  IOffchainBook.json  IPerpEngine.json  IProductEngine.json  ISpotEngine.json  IStaking.json  IVrtxAirdrop.json  MockERC20.json
vertex_protocol/contracts/deployments/: deployment.abstractMainnet.json  deployment.abstractTestnet.json  deployment.arbitrumGoerli.json  deployment.arbitrumOne.json  deployment.arbitrumSepolia.json  deployment.baseMainnet.json  deployment.baseTestnet.json  deployment.beraMainnet.json  deployment.beraTestnet.json  deployment.blastMainnet.json  deployment.blastSepolia.json  deployment.blastTestnet.json  deployment.local.json  deployment.mantleGoerli.json  deployment.mantleMainnet.json  deployment.mantleSepolia.json  deployment.mantleTestnet.json  deployment.seiMainnet.json  deployment.seiTestnet.json  deployment.sonicMainnet.json  deployment.sonicTestnet.json  deployment.test.json
vertex_protocol/contracts/eip712/: __init__.py  domain.py  sign.py  types.py
vertex_protocol/engine_client/: __init__.py  execute.py  query.py  sanity.py
vertex_protocol/engine_client/types/: __init__.py  execute.py  models.py  query.py  stream.py
vertex_protocol/indexer_client/: __init__.py  query.py
vertex_protocol/indexer_client/types/: __init__.py  models.py  query.py
vertex_protocol/trigger_client/: __init__.py  execute.py  query.py
vertex_protocol/trigger_client/types/: __init__.py  execute.py  models.py  query.py
vertex_protocol/utils/: __init__.py  asserts.py  backend.py  bytes32.py  endpoint.py  engine.py  enum.py  exceptions.py  execute.py  expiration.py  indexer.py  interest.py  math.py  model.py  nonce.py  subaccount.py  time.py  types.py
