[tool.poetry]
name = "vertex-protocol"
version = "0.1.0"
description = "Vertex Protocol SDK"
authors = ["Jeury Mejia <jeury@vertexprotocol.com>"]
readme = "README.md"
packages = [{include = "vertex_protocol"}]
keywords = ["vertex protocol", "vertex sdk", "vertex protocol api"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
web3 = "^6.4.0"
eth-account = "^0.8.0"

[[tool.poetry.source]]
name = "private"
url = "https://github.com/vertex-protocol/vertex-python-sdk"


[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
