[tool.poetry]
name = "vertex-protocol"
version = "2.0.0"
description = "Vertex Protocol SDK"
authors = ["Jeury Mejia <jeury@vertexprotocol.com>"]
homepage = "https://vertexprotocol.com/"
maintainers = [
  "Frank Jia <frank@vertexprotocol.com>",
  "Clark Oh-Willeke <clark@vertexprotocol.com>"
]
documentation = "https://vertex-protocol.github.io/vertex-python-sdk/"
readme = "README.md"
packages = [{include = "vertex_protocol"}]
include = ["vertex_protocol/*.json"]
keywords = ["vertex protocol", "vertex sdk", "vertex protocol api"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
web3 = "^6.4.0"
eth-account = "^0.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
pytest = "^7.3.1"
pre-commit = "^3.3.2"
python-dotenv = "^1.0.0"
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.1"
sphinx-autodoc-typehints = "^1.12.0"
pycycle = "^0.0.8"
mypy = "^1.3.0"
types-requests = "^2.31.0.1"
coverage = "^7.2.7"

[tool.poetry.scripts]
test = "pytest:main"
engine-sanity = "sanity.engine_client:run"
indexer-sanity = "sanity.indexer_client:run"
contracts-sanity = "sanity.contracts:run"
client-sanity = "sanity.vertex_client:run"

[[tool.poetry.source]]
name = "private"
url = "https://github.com/vertex-protocol/vertex-python-sdk"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | venv3.9
  | venv3.10
  | venv3.11
)/
'''